--- a/ProyectoP2/CarritoPage.xaml
+++ b/ProyectoP2/CarritoPage.xaml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ProyectoP2.Paginas.CarritoPage"
              Title="Carrito de Compras"
              BackgroundColor="#f1f1f1">
 
     <ScrollView Padding="20">
         <StackLayout Spacing="20">
-
             <Label Text="Carrito de Compras"
                    FontSize="24" 
                    FontAttributes="Bold" 
                    HorizontalOptions="Center" 
                    TextColor="#34495E"/>
+
 
             <CollectionView ItemsSource="{Binding ProductosEnCarrito}">
                 <CollectionView.ItemTemplate>
@@ -30,19 +30,18 @@
                 </CollectionView.ItemTemplate>
             </CollectionView>
 
-          
+
             <StackLayout Orientation="Horizontal" Padding="10" Spacing="10">
                 <Label Text="Total: " FontSize="18" FontAttributes="Bold" VerticalOptions="Center" TextColor="#34495E"/>
-                <Label Text="{Binding TotalConDescuento, StringFormat='{0:C}'}" FontSize="20" FontAttributes="Bold" HorizontalOptions="EndAndExpand" VerticalOptions="Center" TextColor="#27AE60"/>
+                <Label x:Name="TotalLabel" Text="Total con descuento: $0" FontSize="20" FontAttributes="Bold" HorizontalOptions="EndAndExpand" VerticalOptions="Center" TextColor="#27AE60"/>
             </StackLayout>
 
-            
+
             <StackLayout Orientation="Horizontal" Padding="10" Spacing="10">
-                <Entry x:Name="CodigoDescuentoEntry" Placeholder="Ingresa codigo de descuento" FontSize="16" Text="{Binding CodigoDescuento}"/>
-                <Button Text="Aplicar descuento" BackgroundColor="#3498DB" TextColor="White" Command="{Binding AplicarDescuentoCommand}" />
+                <Entry x:Name="CodigoDescuentoEntry" Placeholder="Ingresa código de descuento" FontSize="16" />
+                <Button Text="Aplicar descuento" BackgroundColor="#3498DB" TextColor="White" Clicked="OnAplicarDescuentoClicked"/>
             </StackLayout>
 
-          
             <Button Text="Finalizar Compra" 
                     BackgroundColor="#27AE60" 
                     TextColor="White" 
@@ -51,6 +50,7 @@
                     CornerRadius="30" 
                     VerticalOptions="Center" 
                     Command="{Binding OnFinalizarCompraClicked}" />
+
 
             <Border StrokeShape="RoundRectangle 48"
         StrokeThickness="0"
@@ -84,6 +84,9 @@
                 </Grid>
             </Border>
 
+
+
         </StackLayout>
+
     </ScrollView>
 </ContentPage>
